--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
@@ -47,8 +48,8 @@
 						<artifactId>maven-compiler-plugin</artifactId>
 						<version>2.4</version>
 						<configuration>
-							<source>1.8</source>
-							<target>1.8</target>
+							<source>${java.version}</source>
+							<target>${java.version}</target>
 							<debug>true</debug>
 							<debuglevel>lines,vars,source</debuglevel>
 						</configuration>
@@ -69,8 +70,8 @@
 						<artifactId>maven-compiler-plugin</artifactId>
 						<version>2.4</version>
 						<configuration>
-							<source>1.8</source>
-							<target>1.8</target>
+							<source>${java.version}</source>
+							<target>${java.version}</target>
 							<debug>true</debug>
 							<debuglevel>lines,vars,source</debuglevel>
 						</configuration>
@@ -102,7 +103,7 @@
 						<configuration>
 							<sourceEncoding>utf-8</sourceEncoding>
 							<minimumTokens>100</minimumTokens>
-							<targetJdk>1.8</targetJdk>
+							<targetJdk>${java.version}</targetJdk>
 							<format>xml</format>
 							<failOnViolation>false</failOnViolation>
 						</configuration>
@@ -143,8 +144,8 @@
 						<artifactId>maven-compiler-plugin</artifactId>
 						<version>2.4</version>
 						<configuration>
-							<source>1.8</source>
-							<target>1.8</target>
+							<source>${java.version}</source>
+							<target>${java.version}</target>
 							<debug>true</debug>
 							<debuglevel>lines,vars,source</debuglevel>
 						</configuration>
@@ -249,16 +250,16 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-		    <groupId>ch.qos.logback</groupId>
-		    <artifactId>logback-core</artifactId>
-		    <version>${logback.version}</version>
-		    <scope>provided</scope>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-core</artifactId>
+			<version>${logback.version}</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
-		    <groupId>ch.qos.logback</groupId>
-		    <artifactId>logback-classic</artifactId>
-		    <version>${logback.version}</version>
-		    <scope>provided</scope>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>${logback.version}</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
@@ -317,6 +318,28 @@
 			<artifactId>cxf-rt-rs-service-description-swagger</artifactId>
 			<version>${cxf.version}</version>
 		</dependency>
+		
+		<!-- Java 11 Dependencies -->
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>${jaxb.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-core</artifactId>
+			<version>${jaxb.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-impl</artifactId>
+			<version>${jaxb.version}</version>
+		</dependency>
+		<dependency>
+    		<groupId>javax.xml.ws</groupId>
+    		<artifactId>jaxws-api</artifactId>
+    		<version>${jaxws.version}</version>
+		</dependency>
 
 		<!-- Test Dependencies -->
 		<dependency>
@@ -359,14 +382,14 @@
 		<java.version>1.8</java.version>
 		<maven.resource.plugin.version>3.0.2</maven.resource.plugin.version>
 		<maven.clean.plugin.version>3.0.0</maven.clean.plugin.version>
-		<maven.compiler.plugin.version>2.3.2</maven.compiler.plugin.version>
+		<maven.compiler.plugin.version>3.7.0</maven.compiler.plugin.version>
 		<maven.scm.plugin.version>1.9</maven.scm.plugin.version>
 		<commons.io>2.5</commons.io>
 		<commons.codec>1.10</commons.codec>
 		<cxf.version>3.1.11</cxf.version>
 		<gson.version>2.2.4</gson.version>
 		<guice.version>3.0</guice.version>
-		<mockito.version>1.10.8</mockito.version>
+		<mockito.version>2.20.0</mockito.version>
 		<junit.version>4.11</junit.version>
 		<hamcrest.all.version>1.3</hamcrest.all.version>
 		<retrofit.version>1.8.0</retrofit.version>
@@ -382,7 +405,9 @@
 		<lucene.version>7.0.1</lucene.version>
 		<chemistry.version>1.1.0</chemistry.version>
 		<flowable.version>6.3.0</flowable.version>
-		
+		<jaxb.version>2.3.0</jaxb.version>
+		<jaxws.version>2.3.0</jaxws.version>
+
 		<skip.tests>true</skip.tests>
 	</properties>
 
@@ -401,7 +426,7 @@
 		<module>modules/commons</module>
 		<module>modules/cms</module>
 		<module>modules/bpm</module>
-		
+
 		<module>groups/runtime-all</module>
 		<module>groups/runtime-javascript</module>
 
