--- a/releng/server-all/.project
+++ b/releng/server-all/.project
@@ -1,37 +1,190 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>dirigible-war-all</name>
-	<comment></comment>
-	<projects>
-	</projects>
-	<buildSpec>
-		<buildCommand>
-			<name>org.eclipse.jdt.core.javabuilder</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
-		<buildCommand>
-			<name>org.eclipse.wst.common.project.facet.core.builder</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
-		<buildCommand>
-			<name>org.eclipse.wst.validation.validationbuilder</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
-		<buildCommand>
-			<name>org.eclipse.m2e.core.maven2Builder</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
-	</buildSpec>
-	<natures>
-		<nature>org.eclipse.jem.workbench.JavaEMFNature</nature>
-		<nature>org.eclipse.wst.common.modulecore.ModuleCoreNature</nature>
-		<nature>org.eclipse.jdt.core.javanature</nature>
-		<nature>org.eclipse.m2e.core.maven2Nature</nature>
-		<nature>org.eclipse.wst.common.project.facet.core.nature</nature>
-		<nature>org.eclipse.wst.jsdt.core.jsNature</nature>
-	</natures>
+  <name>dirigible-server-all</name>
+  <comment>Dirigible Parent. NO_M2ECLIPSE_SUPPORT: Project files created with the maven-eclipse-plugin are not supported in M2Eclipse.</comment>
+  <projects>
+    <project>dirigible-commons-config</project>
+    <project>dirigible-api</project>
+    <project>dirigible-api-facade-all</project>
+    <project>dirigible-api-facade-cms</project>
+    <project>dirigible-commons-api</project>
+    <project>dirigible-core-security</project>
+    <project>dirigible-database-persistence</project>
+    <project>dirigible-database-sql</project>
+    <project>dirigible-core-scheduler</project>
+    <project>dirigible-database-data-models</project>
+    <project>dirigible-repository-api</project>
+    <project>dirigible-api-facade-security</project>
+    <project>dirigible-api-facade-http</project>
+    <project>dirigible-commons-xml2json</project>
+    <project>dirigible-engine-api</project>
+    <project>dirigible-api-facade-core</project>
+    <project>dirigible-core-extensions</project>
+    <project>dirigible-api-facade-database</project>
+    <project>dirigible-database-api</project>
+    <project>dirigible-api-facade-indexing</project>
+    <project>dirigible-api-facade-io</project>
+    <project>dirigible-api-facade-log</project>
+    <project>dirigible-api-facade-messaging</project>
+    <project>dirigible-api-facade-repository</project>
+    <project>dirigible-service-repository</project>
+    <project>dirigible-api-facade-utils</project>
+    <project>dirigible-api-facade-bpm</project>
+    <project>dirigible-api-facade-workspace</project>
+    <project>dirigible-core-workspace</project>
+    <project>dirigible-api-javascript-all</project>
+    <project>dirigible-api-javascript-cms</project>
+    <project>dirigible-api-javascript-core</project>
+    <project>dirigible-api-javascript-database</project>
+    <project>dirigible-api-javascript-http</project>
+    <project>dirigible-api-javascript-indexing</project>
+    <project>dirigible-api-javascript-io</project>
+    <project>dirigible-api-javascript-log</project>
+    <project>dirigible-api-javascript-messaging</project>
+    <project>dirigible-api-javascript-repository</project>
+    <project>dirigible-api-javascript-security</project>
+    <project>dirigible-api-javascript-test</project>
+    <project>dirigible-api-javascript-utils</project>
+    <project>dirigible-api-javascript-bpm</project>
+    <project>dirigible-api-javascript-workspace</project>
+    <project>dirigible-repository</project>
+    <project>dirigible-repository-search</project>
+    <project>dirigible-repository-zip</project>
+    <project>dirigible-repository-local</project>
+    <project>dirigible-repository-master</project>
+    <project>dirigible-database</project>
+    <project>dirigible-database-data-structures</project>
+    <project>dirigible-database-h2</project>
+    <project>dirigible-database-custom</project>
+    <project>dirigible-core</project>
+    <project>dirigible-core-git</project>
+    <project>dirigible-core-publisher</project>
+    <project>dirigible-core-indexing</project>
+    <project>dirigible-commons-test</project>
+    <project>dirigible-core-messaging</project>
+    <project>dirigible-engine-javascript</project>
+    <project>dirigible-core-registry</project>
+    <project>dirigible-services</project>
+    <project>dirigible-service-core</project>
+    <project>dirigible-service-extensions</project>
+    <project>dirigible-service-registry</project>
+    <project>dirigible-service-security</project>
+    <project>dirigible-service-theme</project>
+    <project>dirigible-service-transport</project>
+    <project>dirigible-service-operations</project>
+    <project>dirigible-engine</project>
+    <project>dirigible-engine-javascript-nashorn</project>
+    <project>dirigible-engine-javascript-rhino</project>
+    <project>dirigible-engine-javascript-v8</project>
+    <project>dirigible-engine-job</project>
+    <project>dirigible-engine-listener</project>
+    <project>dirigible-engine-web</project>
+    <project>dirigible-engine-wiki</project>
+    <project>dirigible-engine-command</project>
+    <project>dirigible-commons-process</project>
+    <project>dirigible-cms-api</project>
+    <project>dirigible-cms-internal</project>
+    <project>dirigible-bpm</project>
+    <project>dirigible-bpm-api</project>
+    <project>dirigible-bpm-flowable</project>
+    <project>dirigible-ide</project>
+    <project>dirigible-ide-ui-group-all</project>
+    <project>dirigible-ide-ui-branding</project>
+    <project>dirigible-ide-ui-core</project>
+    <project>dirigible-ide-ui-workbench</project>
+    <project>dirigible-ide-ui-terminal</project>
+    <project>dirigible-ide-ui-console</project>
+    <project>dirigible-ide-ui-orion</project>
+    <project>dirigible-ide-ui-swagger</project>
+    <project>dirigible-ide-ui-workspace</project>
+    <project>dirigible-ide-ui-preview</project>
+    <project>dirigible-ide-ui-help</project>
+    <project>dirigible-ide-ui-database</project>
+    <project>dirigible-ide-ui-git</project>
+    <project>dirigible-ide-ui-repository</project>
+    <project>dirigible-ide-ui-documents</project>
+    <project>dirigible-ide-ui-bpm</project>
+    <project>dirigible-ide-ui-schema</project>
+    <project>dirigible-ide-ui-entity</project>
+    <project>dirigible-ide-ui-monaco</project>
+    <project>dirigible-ide-ui-ace</project>
+    <project>dirigible-ide-ui-debugger</project>
+    <project>dirigible-ide-ui-logs</project>
+    <project>dirigible-ide-ui-jobs</project>
+    <project>dirigible-ide-ui-extensions</project>
+    <project>dirigible-ide-ui-operations</project>
+    <project>dirigible-ide-ui-security</project>
+    <project>dirigible-ide-ui-listeners</project>
+    <project>dirigible-ide-ui-data-structures</project>
+    <project>dirigible-ide-ui-registry</project>
+    <project>dirigible-ide-ui-plugins</project>
+    <project>dirigible-ide-ui-discussions</project>
+    <project>dirigible-ide-services-group-all</project>
+    <project>dirigible-ide-service-console</project>
+    <project>dirigible-ide-service-databases</project>
+    <project>dirigible-ide-service-generation</project>
+    <project>dirigible-ide-service-workspaces</project>
+    <project>dirigible-ide-service-git</project>
+    <project>dirigible-ide-service-publisher</project>
+    <project>dirigible-ide-service-terminal</project>
+    <project>dirigible-ide-service-bpm</project>
+    <project>dirigible-ide-service-generation-mustache</project>
+    <project>dirigible-ide-service-generation-velocity</project>
+    <project>dirigible-templates</project>
+    <project>dirigible-template-hello-world</project>
+    <project>dirigible-template-http-client</project>
+    <project>dirigible-template-database-access</project>
+    <project>dirigible-template-database-table</project>
+    <project>dirigible-template-database-view</project>
+    <project>dirigible-template-html</project>
+    <project>dirigible-template-bookstore</project>
+    <project>dirigible-template-job</project>
+    <project>dirigible-template-listener</project>
+    <project>dirigible-template-extension-view</project>
+    <project>dirigible-template-extension-perspective</project>
+    <project>dirigible-template-application-launchpad</project>
+    <project>dirigible-template-application-angular</project>
+    <project>dirigible-template-mobile-hello-world</project>
+    <project>dirigible-resources</project>
+    <project>dirigible-resources-angular</project>
+    <project>dirigible-resources-bootstrap</project>
+    <project>dirigible-resources-fonts</project>
+    <project>dirigible-resources-goldenlayout</project>
+    <project>dirigible-resources-jquery</project>
+    <project>dirigible-resources-jstree</project>
+    <project>dirigible-resources-flowable-libs</project>
+    <project>dirigible-resources-mxgraph</project>
+    <project>dirigible-resources-jqplot</project>
+    <project>dirigible-resources-resources</project>
+    <project>dirigible-resources-themes</project>
+    <project>dirigible-resources-theme-alice</project>
+    <project>dirigible-resources-theme-baroness</project>
+    <project>dirigible-resources-theme-default</project>
+    <project>dirigible-resources-theme-florence</project>
+    <project>dirigible-resources-theme-simone</project>
+    <project>dirigible-resources-theme-wendy</project>
+    <project>dirigible-ext-qunit</project>
+  </projects>
+  <buildSpec>
+    <buildCommand>
+      <name>org.eclipse.jdt.core.javabuilder</name>
+    </buildCommand>
+    <buildCommand>
+      <name>org.eclipse.wst.common.project.facet.core.builder</name>
+    </buildCommand>
+    <buildCommand>
+      <name>org.eclipse.wst.validation.validationbuilder</name>
+    </buildCommand>
+    <buildCommand>
+      <name>org.eclipse.m2e.core.maven2Builder</name>
+    </buildCommand>
+  </buildSpec>
+  <natures>
+    <nature>org.eclipse.jem.workbench.JavaEMFNature</nature>
+    <nature>org.eclipse.wst.common.modulecore.ModuleCoreNature</nature>
+    <nature>org.eclipse.jdt.core.javanature</nature>
+    <nature>org.eclipse.m2e.core.maven2Nature</nature>
+    <nature>org.eclipse.wst.common.project.facet.core.nature</nature>
+    <nature>org.eclipse.wst.jsdt.core.jsNature</nature>
+  </natures>
 </projectDescription>
