Sybase ASE does not support Sequence fix

--- a/api/api-facade/api-database/pom.xml
+++ b/api/api-facade/api-database/pom.xml
@@ -39,6 +39,11 @@
             <artifactId>dirigible-database-api</artifactId>
             <version>3.3.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-database-persistence</artifactId>
+            <version>3.3.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
