--- a/releng/sap-all/src/main/resources/dirigible.properties
+++ b/releng/sap-all/src/main/resources/dirigible.properties
@@ -19,4 +19,5 @@ DIRIGIBLE_DATABASE_PROVIDER=managed
 DIRIGIBLE_DATABASE_DATASOURCE_NAME_DEFAULT=DefaultDB
 DIRIGIBLE_CMS_PROVIDER=managed
 DIRIGIBLE_BPM_PROVIDER=internal
-
+DIRIGIBLE_FLOWABLE_USE_DEFAULT_DATABASE=false
+DIRIGIBLE_MESSAGING_USE_DEFAULT_DATABASE=false
