--- a/modules/core/pom.xml
+++ b/modules/core/pom.xml
@@ -24,6 +24,7 @@
 		<module>core-scheduler</module>
 		<module>core-security</module>
 		<module>core-workspace</module>
+		<module>core-migrations</module>
 	</modules>
 
 </project>
