--- a/templates/template-application-angular/src/main/resources/template-application-angular/api/launchpad/perspectives.js.template
+++ b/templates/template-application-angular/src/main/resources/template-application-angular/api/launchpad/perspectives.js.template
@@ -19,7 +19,9 @@ var perspectiveExtensions = extensions.getExtensions('launchpad-{{extensionName}
 for (var i = 0; perspectiveExtensions !== null && i < perspectiveExtensions.length; i++) {
     var perspectiveExtension = require(perspectiveExtensions[i]);
     var perspective = perspectiveExtension.getPerspective(relativePath);
-    perspectives.push(perspective);
+    if (!isPerspectiveAdded(perspectives, perspective)) {
+	perspectives.push(perspective);
+    }
 }
 
 perspectives.sort(function(p, n) {
@@ -27,6 +29,15 @@ perspectives.sort(function(p, n) {
 });
 
 response.println(JSON.stringify(perspectives));
+
+function isPerspectiveAdded(perspectives, perspective) {
+	for (var i = 0; i < perspectives.length; i ++) {
+		if (perspectives[i].name === perspective.name) {
+			return true;
+		}
+	}
+	return false;
+}
 
 function getRelativePath(pathSegments) {
 	var relativePath = '/';
