bpm spi project set to v4

--- a/api/api-javascript/api-bpm/src/main/resources/bpm/project.json
+++ b/api/api-javascript/api-bpm/src/main/resources/bpm/project.json
@@ -1,1 +1,8 @@
-{"guid":"bpm","repository":{"type":"git","branch":"master","url":"https://github.com/dirigiblelabs/api-v3-bpm.git"}}
+{
+	"guid": "bpm",
+	"repository": {
+		"type": "git",
+		"branch": "master",
+		"url": "https://github.com/dirigiblelabs/api-bpm.git"
+	}
+}
