--- a/api/api-javascript/api-workspace/.gitignore
+++ b/api/api-javascript/api-workspace/.gitignore
@@ -1,2 +1,17 @@
-/target/
+# folders
+dist/
+.settings/
+target/
+derby/
+dirigible_local/
+
+# files
+.DS_Store
+.project
+.classpath
+*.bak
+*.class
+*.jar
+derby.log
+/bin/
 /target/
