--- a/ide/ui/ide-debugger/.gitignore
+++ b/ide/ui/ide-debugger/.gitignore
@@ -1,2 +1,17 @@
-/target/
+# folders
+dist/
+.settings/
+target/
+derby/
+dirigible_local/
+
+# files
+.DS_Store
+.project
+.classpath
+*.bak
+*.class
+*.jar
+derby.log
+/bin/
 /target/
