--- a/ide/ui/ide-git/.gitignore
+++ b/ide/ui/ide-git/.gitignore
@@ -1,21 +1,17 @@
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
-/target/
+# folders
+dist/
+.settings/
+target/
+derby/
+dirigible_local/
+
+# files
+.DS_Store
+.project
+.classpath
+*.bak
+*.class
+*.jar
+derby.log
+/bin/
 /target/
