--- a/api/api-javascript/api-database/src/main/resources/db/project.json
+++ b/api/api-javascript/api-database/src/main/resources/db/project.json
@@ -1,1 +1,8 @@
-{"guid":"db","repository":{"type":"git","branch":"master","url":"https://github.com/dirigiblelabs/api-v3-db.git"}}
+{
+	"guid": "db",
+	"repository": {
+		"type": "git",
+		"branch": "master",
+		"url": "https://github.com/dirigiblelabs/api-db.git"
+	}
+}
