io api wrappers and aliases set to v4

--- a/api/api-javascript/api-io/src/main/resources/io/project.json
+++ b/api/api-javascript/api-io/src/main/resources/io/project.json
@@ -1,1 +1,8 @@
-{"guid":"io","repository":{"type":"git","branch":"master","url":"https://github.com/dirigiblelabs/api-v3-io.git"}}
+{
+	"guid": "io",
+	"repository": {
+		"type": "git",
+		"branch": "master",
+		"url": "https://github.com/dirigiblelabs/api-io.git"
+	}
+}
