--- a/api/api-javascript/api-security/src/main/resources/security/project.json
+++ b/api/api-javascript/api-security/src/main/resources/security/project.json
@@ -1,1 +1,8 @@
-{"guid":"security","repository":{"type":"git","branch":"master","url":"https://github.com/dirigiblelabs/api-v3-security.git"}}
+{
+	"guid": "security",
+	"repository": {
+		"type": "git",
+		"branch": "master",
+		"url": "https://github.com/dirigiblelabs/api-security.git"
+	}
+}
