Fixed: #429 - Programmatic Custom Datasources Support

--- a/modules/database/pom.xml
+++ b/modules/database/pom.xml
@@ -24,6 +24,7 @@
 		<module>database-persistence</module>
 		<module>database-sql</module>
 		<module>database-h2</module>
+		<module>database-dynamic</module>
 	</modules>
 
 </project>
