--- a/modules/database/database-all/pom.xml
+++ b/modules/database/database-all/pom.xml
@@ -55,6 +55,11 @@
             <artifactId>dirigible-database-sql</artifactId>
             <version>3.5.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-database-dynamic</artifactId>
+            <version>3.5.0-SNAPSHOT</version>
+        </dependency>
 
         <!-- Database Implementations -->
         <!-- 
