--- a/modules/database/database-dynamic/pom.xml
+++ b/modules/database/database-dynamic/pom.xml
@@ -4,13 +4,13 @@
 
 	<parent>
 		<groupId>org.eclipse.dirigible</groupId>
-		<artifactId>dirigible-api-facade-parent</artifactId>
+		<artifactId>dirigible-database-parent</artifactId>
 		<version>3.5.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
-	<name>API - Facade - Database</name>
-	<artifactId>dirigible-api-facade-database</artifactId>
+	<name>Database - Dynamic</name>
+	<artifactId>dirigible-database-dynamic</artifactId>
     <packaging>jar</packaging>
     
     <build>
@@ -30,25 +30,20 @@
     
     <dependencies>
     	<dependency>
-            <groupId>org.eclipse.dirigible</groupId>
-            <artifactId>dirigible-commons-api</artifactId>
-            <version>3.5.0-SNAPSHOT</version>
-        </dependency>
+	    	<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-commons-api</artifactId>
+			<version>3.5.0-SNAPSHOT</version>
+    	</dependency>
         <dependency>
             <groupId>org.eclipse.dirigible</groupId>
             <artifactId>dirigible-database-api</artifactId>
             <version>3.5.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>org.eclipse.dirigible</groupId>
-            <artifactId>dirigible-database-persistence</artifactId>
-            <version>3.5.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.eclipse.dirigible</groupId>
-            <artifactId>dirigible-database-dynamic</artifactId>
-            <version>3.5.0-SNAPSHOT</version>
-        </dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-dbcp2</artifactId>
+		    <version>2.2.0</version>
+		</dependency>
     </dependencies>
 
 </project>
