--- a/ide/ui/ide-group-all/pom.xml
+++ b/ide/ui/ide-group-all/pom.xml
@@ -179,5 +179,10 @@
 		 	<artifactId>dirigible-ide-ui-discussions</artifactId>
 		 	<version>3.5.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-ide-ui-deploy-manager</artifactId>
+			<version>3.5.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
