--- a/modules/cms/cms-managed/pom.xml
+++ b/modules/cms/cms-managed/pom.xml
@@ -44,6 +44,11 @@
 			<artifactId>dirigible-cms-api</artifactId>
 			<version>3.5.0-SNAPSHOT</version>
     	</dependency>
+    	<dependency>
+	    	<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-api-facade-core</artifactId>
+			<version>3.5.0-SNAPSHOT</version>
+    	</dependency>
     </dependencies>
 
 </project>
